valider competence
